# eventshop-messaging

./: .gitignore  Cargo.toml
.cargo/: config.toml
.cargo/.cargo/: config.toml
.github/workflows/: publish-rust.yml
eventshop-messaging-core/: Cargo.toml  README.md
eventshop-messaging-core/src/: bus.rs  error.rs  handler.rs  lib.rs  types.rs
eventshop-messaging-rabbitmq/: Cargo.toml  README.md
eventshop-messaging-rabbitmq/src/: lib.rs  options.rs  rabbit_event_bus.rs
eventshop-messaging-rabbitmq/tests/: smoke_it.rs
