# Cargo.toml (root)
[workspace]
members = [
  "eventshop-messaging-core",
  "eventshop-messaging-rabbitmq",
]
resolver = "2"

# Durante CI: construir usando el core local.
# Nota: La clave de patch debe ser el URL exacto del index (incluye 'sparse+').
[patch."sparse+https://pkgs.github.com/RodolfoDevApp/index/"]
eventshop-messaging-core = { path = "eventshop-messaging-core" }
