# Cargo.toml (workspace root)
[workspace]
members = [
  "eventshop-messaging-core",
  "eventshop-messaging-rabbitmq",
]
resolver = "2"

# Forzar que, durante el build en CI, el core se tome del path local
# y NO se intente resolver desde pkgs.github.com.
# Usa owner LITERAL (no variables de Actions).
[patch."sparse+https://pkgs.github.com/RodolfoDevApp/index/"]
eventshop-messaging-core = { path = "eventshop-messaging-core" }
