[package]
name = "eventshop-messaging-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/RodolfoDevApp/eventshop-messaging"
homepage = "https://github.com/RodolfoDevApp/eventshop-messaging"
description = "Core contracts (EventBus, callbacks, DTOs) for EventShop messaging."
keywords = ["messaging", "events", "ddd", "cqrs"]
categories = ["network-programming", "asynchronous"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1"
