[package]
name    = "eventshop-messaging-rabbitmq"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme  = "README.md"
repository = "https://github.com/rodolfodevapp/eventshop-messaging"
homepage   = "https://github.com/rodolfodevapp/eventshop-messaging"
description = "RabbitMQ transport for EventShop messaging."
keywords    = ["messaging", "rabbitmq", "events", "ddd", "cqrs"]
categories  = ["network-programming", "asynchronous"]

[dependencies]
# Para COMPILAR en Actions: el [patch.github] del root hace que esto
# se resuelva al path local (no va al registry).
# Para PUBLICAR luego: este dato sigue siendo valido (version + registry).
eventshop-messaging-core = { version = "0.1.0", registry = "github" }

lapin         = { version = "2.3", features = ["rustls"] }
tokio         = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures-util  = "0.3"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
async-trait   = "0.1"
tracing       = "0.1"
tracing-futures = "0.2"
