[package]
name = "eventshop-messaging-rabbitmq"
version = "0.1.1"            # <-- sube version antes de publicar
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rodolfodevapp/eventshop-messaging"
homepage = "https://github.com/rodolfodevapp/eventshop-messaging"
description = "RabbitMQ transport for EventShop messaging."
keywords = ["messaging", "rabbitmq", "events", "ddd", "cqrs"]
categories = ["network-programming", "asynchronous"]
publish = ["github"]          # <-- clave

[dependencies]
# Usa el core desde el registry (NO path)
eventshop-messaging-core = { version = "0.1.1", registry = "github" }

lapin = { version = "2.3", features = ["rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
